testsuite/tests/typecheck/should_fail/T11313.stderr

T11313.hs:7:12: error:
    • Expected kind ‘* -> *’, but ‘*’ has kind ‘*’
    • In the type ‘*’
      In the expression: fmap @*
      In an equation for ‘x’: x = fmap @*
